--- a/src/components/recipe_cards.css
+++ b/src/components/recipe_cards.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 2rem;
+    margin: 2rem;
     gap: 2rem;
 }
 .recipe_card
