--- a/src/components/recipe_details.css
+++ b/src/components/recipe_details.css
@@ -19,7 +19,7 @@ header > a > img
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 0rem 5rem;
+    margin: 0 5rem 2rem 5rem ;
 }
 .recipe_details > ul,ol
 {
